--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "gradle.plugin.de.fuerstenau:BuildConfigPlugin:1.1.8" // for code-modifier, gradle-plugin
         classpath "com.github.ben-manes:gradle-versions-plugin:0.36.0"
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
+        classpath "io.github.gradle-nexus:publish-plugin:1.0.0"
     }
 }
 
@@ -119,18 +119,23 @@ wrapper {
     distributionType Wrapper.DistributionType.ALL
 }
 
-// Plugin to close and promote staging repository to Central.
-apply plugin: 'io.codearte.nexus-staging'
-nexusStaging {
-    // Staging profile ID for io.objectbox is 1c4c69cbbab380
-    // Get via https://oss.sonatype.org/service/local/staging/profiles
-    // or with Nexus Staging Plugin getStagingProfile task.
-    stagingProfileId = "1c4c69cbbab380"
-    if (project.hasProperty("sonatypeUsername") && project.hasProperty("sonatypePassword")) {
-        println('nexusStaging credentials supplied.')
-        username = sonatypeUsername
-        password = sonatypePassword
-    } else {
-        println('nexusStaging credentials NOT supplied.')
+// Plugin to publish to Central https://github.com/gradle-nexus/publish-plugin/
+// This plugin ensures a separate, named staging repo is created for each build when publishing.
+apply plugin: "io.github.gradle-nexus.publish-plugin"
+nexusPublishing {
+    repositories {
+        sonatype {
+            // Staging profile ID for io.objectbox is 1c4c69cbbab380
+            // Get via https://oss.sonatype.org/service/local/staging/profiles
+            // or with Nexus Staging Plugin getStagingProfile task.
+            stagingProfileId = "1c4c69cbbab380"
+            if (project.hasProperty("sonatypeUsername") && project.hasProperty("sonatypePassword")) {
+                println('nexusPublishing credentials supplied.')
+                username = sonatypeUsername
+                password = sonatypePassword
+            } else {
+                println('nexusPublishing credentials NOT supplied.')
+            }
+        }
     }
 }
