--- a/gradle/objectbox-publish.gradle
+++ b/gradle/objectbox-publish.gradle
@@ -57,7 +57,7 @@ publishing {
                 licenses {
                     license {
                         name = 'GNU General Public License, Version 3'
-                        url = 'http://www.gnu.org/licenses/gpl.txt'
+                        url = 'https://www.gnu.org/licenses/gpl.txt'
                         distribution = 'repo'
                     }
                 }
