--- a/gradle/objectbox-publish.gradle
+++ b/gradle/objectbox-publish.gradle
@@ -9,23 +9,6 @@ javadoc {
     }
 }
 
-def hasSigningProperties() {
-    return (project.hasProperty('signingKeyId')
-            && project.hasProperty('signingKeyFile')
-            && project.hasProperty('signingPassword'))
-}
-
-signing {
-    if (hasSigningProperties()) {
-        String signingKey = new File(signingKeyFile).text
-        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-        sign configurations.archives
-    } else {
-        println "WARNING: Signing information missing/incomplete for ${project.name}"
-    }
-}
-
-
 publishing {
     repositories {
         maven {
@@ -82,5 +65,21 @@ publishing {
                 }
             }
         }
+    }
+}
+
+def hasSigningProperties() {
+    return (project.hasProperty('signingKeyId')
+            && project.hasProperty('signingKeyFile')
+            && project.hasProperty('signingPassword'))
+}
+
+signing {
+    if (hasSigningProperties()) {
+        String signingKey = new File(signingKeyFile).text
+        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+        sign publishing.publications.mavenJava
+    } else {
+        println "WARNING: Signing information missing/incomplete for ${project.name}"
     }
 }
