--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation project(':objectbox-code-modifier')
     compileOnly "com.android.tools.build:gradle:$android_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    // Note: override kotlin-reflect version from com.android.tools.build:gradle to avoid mismatch with stdlib above.
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.javassist:javassist:3.27.0-GA'
 
     // For Transformer to resolve class dependencies to (real) ObjectBox classes
