--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation "io.objectbox:objectbox-java-api:$objectbox_java_version"
     implementation "io.objectbox:objectbox-java:$objectbox_java_version"
     // auto-service generates service configuration for annotation processor.
-    def autoService = '1.0-rc7'
+    def autoService = '1.0'
     compileOnly "com.google.auto.service:auto-service-annotations:$autoService"
     annotationProcessor "com.google.auto.service:auto-service:$autoService"
     // incap generates the META-INF descriptor required to enable incremental annotation processing with Gradle.
