Start development of next version.

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
         moshi_version = '1.11.0'
 
         // Typically, only edit those two:
-        def versionNumber = '2.9.2-RC2' // Without "-SNAPSHOT", e.g. '2.5.0' or '2.4.0-RC'.
-        def isRelease = true       // Set to true for releasing to ignore versionPostFix to avoid e.g. "-dev" versions.
+        def versionNumber = '2.9.2' // Without "-SNAPSHOT", e.g. '2.5.0' or '2.4.0-RC'.
+        def isRelease = false       // Set to true for releasing to ignore versionPostFix to avoid e.g. "-dev" versions.
 
         def libsRelease = isRelease  // e.g. diverge if plugin is still SNAPSHOT, but libs are already final
         def libsVersion = versionNumber + (libsRelease ? "" : "-dev-SNAPSHOT")
