--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ stages:
   - test
   - upload-to-internal
   - upload-to-central
+  - triggers
 
 # Common template to calculate version postfix
 .common:
@@ -71,3 +72,14 @@ upload-to-central:linux:
   after_script:  # also runs on failure, so show CI_JOB_STATUS
     - ci/send-to-gchat.sh "$GOOGLE_CHAT_WEBHOOK_JAVA_CI" --thread $CI_COMMIT_SHA "Release Java plugin *$CI_JOB_STATUS* for $CI_JOB_NAME"
     - ci/send-to-gchat.sh "$GOOGLE_CHAT_WEBHOOK_JAVA_CI" --thread $CI_COMMIT_SHA "Check https://repo1.maven.org/maven2/io/objectbox/ in a few minutes."
+
+trigger-integ-tests:
+  stage: triggers
+  except:
+    - schedules # Do not trigger when run on schedule, integ tests have own schedule.
+  inherit:
+    variables: false
+  allow_failure: true # Branch might not exist, yet, in integ test project.
+  trigger:
+    project: objectbox/objectbox-integration-test
+    branch: $CI_COMMIT_BRANCH
