--- a/objectbox-generator/build.gradle
+++ b/objectbox-generator/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
+apply plugin: "java"
+apply plugin: "kotlin"
 
-archivesBaseName = 'objectbox-generator'
+archivesBaseName = "objectbox-generator"
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
@@ -12,7 +12,7 @@ dependencies {
 
     implementation "io.objectbox:objectbox-java:$objectbox_java_version"
     // https://freemarker.apache.org/docs/app_versions.html
-    implementation 'org.freemarker:freemarker:2.3.31'
+    implementation "org.freemarker:freemarker:2.3.31"
     implementation "org.greenrobot:essentials:$essentials_version"
 
     testImplementation "junit:junit:$junit_version"
@@ -20,10 +20,10 @@ dependencies {
 
 test {
     doFirst {
-        mkdir 'test-out'
+        mkdir "test-out"
     }
     doLast {
-        delete 'test-out'
+        delete "test-out"
     }
 }
 
@@ -31,25 +31,25 @@ javadoc {
     failOnError = false
     title = "ObjectBox Generator ${version} API"
     // Unfinished APIs:
-    excludes = ['org/greenrobot/daogenerator/Query*']
-    options.bottom = /*'Available under the GPLv3 - */'<i>Copyright &#169; 2017 <a href="https://objectbox.io/">ObjectBox Ltd</a>. All Rights Reserved.</i>'
+    excludes = ["org/greenrobot/daogenerator/Query*"]
+    options.bottom = /*"Available under the GPLv3 - */"<i>Copyright &#169; 2017 <a href=\"https://objectbox.io/\">ObjectBox Ltd</a>. All Rights Reserved.</i>"
     doLast {
         copy {
-            from '../javadoc-style/'
+            from "../javadoc-style/"
             into "build/docs/javadoc/"
         }
     }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    archiveClassifier = 'javadoc'
-    from 'build/docs/javadoc'
+    archiveClassifier = "javadoc"
+    from "build/docs/javadoc"
 }
 
 task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
+    archiveClassifier = "sources"
 //    from sourceSets.main.allSource
-    from 'README'
+    from "README"
 }
 
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
@@ -60,8 +60,8 @@ publishing.publications {
         artifact sourcesJar
         artifact javadocJar
         pom {
-            name = 'ObjectBox Generator'
-            description = 'Code generator for ObjectBox, the superfast NoSQL database for Objects'
+            name = "ObjectBox Generator"
+            description = "Code generator for ObjectBox, the superfast NoSQL database for Objects"
         }
     }
 }
