--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -1,12 +1,12 @@
 // https://docs.gradle.org/current/userguide/custom_plugins.html
-apply plugin: 'kotlin'
-apply plugin: 'groovy' // for dsl tests
-apply plugin: 'de.fuerstenau.buildconfig'
-apply plugin: 'idea' // to pick up generated BuildConfig in IntelliJ
-apply plugin: 'maven-publish'
+apply plugin: "kotlin"
+apply plugin: "groovy" // for dsl tests
+apply plugin: "de.fuerstenau.buildconfig"
+apply plugin: "idea" // to pick up generated BuildConfig in IntelliJ
+apply plugin: "maven-publish"
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 // For integration tests (TestKit): Write the plugin's classpath to a file to share with the tests.
 task createClasspathManifest {
@@ -27,13 +27,13 @@ task createClasspathManifest {
 
 dependencies {
     implementation gradleApi()
-    implementation project(':objectbox-code-modifier')
+    implementation project(":objectbox-code-modifier")
     compileOnly "com.android.tools.build:gradle:$android_version"
     compileOnly "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     // Note: override kotlin-reflect version from com.android.tools.build:gradle to avoid mismatch with stdlib above.
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'org.javassist:javassist:3.27.0-GA'
+    implementation "org.javassist:javassist:3.27.0-GA"
 
     // For Transformer to resolve class dependencies to (real) ObjectBox classes
     implementation "io.objectbox:objectbox-java:$objectbox_java_version"
@@ -53,11 +53,11 @@ dependencies {
 
 buildConfig {
     // rename to avoid conflict with other build config files (modules use same root package)
-    clsName = 'GradlePluginBuildConfig'
+    clsName = "GradlePluginBuildConfig"
     // Versions of libraries to add to projects applying the plugin.
-    buildConfigField 'String', 'APPLIES_JAVA_VERSION', {"$applies_ob_java_version"}
-    buildConfigField 'String', 'APPLIES_NATIVE_VERSION', {"$applies_ob_native_version"}
-    buildConfigField 'String', 'APPLIES_NATIVE_SYNC_VERSION', {"$applies_ob_native_sync_version"}
+    buildConfigField "String", "APPLIES_JAVA_VERSION", {"$applies_ob_java_version"}
+    buildConfigField "String", "APPLIES_NATIVE_VERSION", {"$applies_ob_native_version"}
+    buildConfigField "String", "APPLIES_NATIVE_SYNC_VERSION", {"$applies_ob_native_sync_version"}
 }
 
 // For integration tests (TestKit): publish other modules to repository in build folder.
@@ -112,13 +112,13 @@ tasks {
 }
 
 task javadocJar(type: Jar) {
-    archiveClassifier = 'javadoc'
-    from 'README'
+    archiveClassifier = "javadoc"
+    from "README"
 }
 
 task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
-    from 'README'
+    archiveClassifier = "sources"
+    from "README"
 }
 
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
@@ -129,8 +129,8 @@ publishing.publications {
         artifact sourcesJar
         artifact javadocJar
         pom {
-            name = 'ObjectBox Gradle Plugin'
-            description = 'Gradle Plugin for ObjectBox (NoSQL for Objects)'
+            name = "ObjectBox Gradle Plugin"
+            description = "Gradle Plugin for ObjectBox (NoSQL for Objects)"
         }
     }
 }
