--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -1,22 +1,22 @@
-apply plugin: 'kotlin'
+apply plugin: "kotlin"
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
 dependencies {
-    implementation project (':objectbox-code-modifier')
-    implementation project (':objectbox-generator')
+    implementation project (":objectbox-code-modifier")
+    implementation project (":objectbox-generator")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "io.objectbox:objectbox-java-api:$objectbox_java_version"
     implementation "io.objectbox:objectbox-java:$objectbox_java_version"
     // auto-service generates service configuration for annotation processor.
-    def autoService = '1.0'
+    def autoService = "1.0"
     compileOnly "com.google.auto.service:auto-service-annotations:$autoService"
     annotationProcessor "com.google.auto.service:auto-service:$autoService"
     // incap generates the META-INF descriptor required to enable incremental annotation processing with Gradle.
-    def incap = '0.3'
+    def incap = "0.3"
     implementation "net.ltgt.gradle.incap:incap:$incap"
     annotationProcessor "net.ltgt.gradle.incap:incap-processor:$incap"
 
@@ -28,19 +28,19 @@ dependencies {
     }
     testImplementation "junit:junit:$junit_version"
     testImplementation "com.google.truth:truth:$truth_version"
-    testImplementation 'com.google.testing.compile:compile-testing:0.19'
+    testImplementation "com.google.testing.compile:compile-testing:0.19"
     // generated files during test need objectbox dependencies to compile
     testImplementation "io.objectbox:objectbox-java:$objectbox_java_version"
 }
 
 task javadocJar(type: Jar) {
-    archiveClassifier = 'javadoc'
-    from 'README'
+    archiveClassifier = "javadoc"
+    from "README"
 }
 
 task sourcesJar(type: Jar) {
-    archiveClassifier = 'sources'
-    from 'README'
+    archiveClassifier = "sources"
+    from "README"
 }
 
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
@@ -51,8 +51,8 @@ publishing.publications {
         artifact sourcesJar
         artifact javadocJar
         pom {
-            name = 'ObjectBox Processor'
-            description = 'Annotation processor for ObjectBox (NoSQL for Objects)'
+            name = "ObjectBox Processor"
+            description = "Annotation processor for ObjectBox (NoSQL for Objects)"
         }
     }
 }
