--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:$mockito_version"
     testImplementation "com.google.truth:truth:$truth_version"
     testImplementation "com.squareup.moshi:moshi:$moshi_version"
+    testImplementation("com.squareup.okio:okio:$okioVersion")
     // For plugin apply tests and outdated TestKit tests (dir "test-gradle-projects").
     testImplementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     testImplementation "com.android.tools.build:gradle:$android_version"
