--- a/objectbox-gradle-plugin/test-gradle-projects/java/build.gradle
+++ b/objectbox-gradle-plugin/test-gradle-projects/java/build.gradle
@@ -16,7 +16,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:$mockito_version"
+    testCompile "org.mockito:mockito-core:$mockitoVersion"
 }
 
 repositories {
