--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # Default image for linux builds
-image: objectboxio/buildenv:22.9.3-android
+image: objectboxio/buildenv-android:2023-07-28
 
 variables:
   # Disable the Gradle daemon. Gradle may run in a Docker container with a shared
