Analysis: require and set token before publishing #148

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ stages:
   extends: .common
   stage: test
   script:
+    - ./scripts/set-analysis-token.sh $JAVA_ANALYSIS_TOKEN
     - ./gradlew $GITLAB_REPO_ARGS $VERSION_ARGS clean check
   artifacts:
     when: always
@@ -50,6 +51,7 @@ upload-to-internal:linux:
   stage: upload-to-internal
   tags: [ docker, x64 ]
   script:
+    - ./scripts/set-analysis-token.sh $JAVA_ANALYSIS_TOKEN
     - ./gradlew $GITLAB_REPO_ARGS $VERSION_ARGS publishMavenJavaPublicationToGitLabRepository
 
 upload-to-central:linux:
@@ -59,6 +61,7 @@ upload-to-central:linux:
   only:
     - publish
   script:
+    - ./scripts/set-analysis-token.sh $JAVA_ANALYSIS_TOKEN
     - ./gradlew $GITLAB_REPO_ARGS $VERSION_ARGS $CENTRAL_REPO_ARGS publishMavenJavaPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository
     - echo "Published successfully to Central - check https://repo1.maven.org/maven2/io/objectbox/ in a few minutes."
   before_script:
